Fix uneven parameter button spacing

--- a/src/blocks/query-loop/editor.scss
+++ b/src/blocks/query-loop/editor.scss
@@ -54,6 +54,7 @@
 		right: 0;
 		justify-content: flex-end !important;
     	height: auto;
+		min-width: auto;
 
 		&.components-button.has-icon.has-text svg {
 			margin-right: 0;
